--- a/my-app/src/components/accordian/styles.css
+++ b/my-app/src/components/accordian/styles.css
@@ -1,31 +1,41 @@
-.wrapper{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.accordian{
-    width: 500px;
+.wrapper button {
+  padding: 10px 20px;
+  background: #614101;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.items{
-    background: #614101;
-    margin-bottom: 10px;
-    padding: 10px 20px;
+.accordian {
+  width: 500px;
 }
 
-.title{
-    color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-
+.item {
+  background: #614101;
+  margin-bottom: 10px;
+  padding: 10px 20px;
 }
 
-.content{
-    color:#ffffff;
-    height: auto;
+.title {
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.content {
+  color: #ffffff;
+  height: auto;
 }
